Lab3AT/Parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     empty -> <empty>
Rule 2     literal -> BOOL_LITERAL
Rule 3     literal -> OCT_INT
Rule 4     literal -> DEC_INT
Rule 5     literal -> HEX_INT
Rule 6     array_literal -> LBRACKET array_elements_opt RBRACKET
Rule 7     array_elements_opt -> array_elements_list
Rule 8     array_elements_opt -> empty
Rule 9     array_elements_list -> expression
Rule 10    array_elements_list -> array_elements_list COMMA expression
Rule 11    dimensions_opt -> LBRACKET dimensions_list RBRACKET
Rule 12    dimensions_opt -> empty
Rule 13    dimensions_list -> expression
Rule 14    dimensions_list -> dimensions_list COMMA expression
Rule 15    var_declaration -> VAR IDENTIFIER dimensions_opt ASSIGN expression
Rule 16    array_access -> IDENTIFIER LBRACKET indices_list RBRACKET
Rule 17    indices_list -> expression
Rule 18    indices_list -> indices_list COMMA expression
Rule 19    size_operator -> SIZE LPAREN IDENTIFIER RPAREN
Rule 20    type_conversion -> LOGITIZE IDENTIFIER
Rule 21    type_conversion -> DIGITIZE IDENTIFIER
Rule 22    size_change -> REDUCE IDENTIFIER dimensions_opt
Rule 23    size_change -> EXTEND IDENTIFIER dimensions_opt
Rule 24    assignment -> IDENTIFIER ASSIGN expression
Rule 25    expression -> ELEQ expression
Rule 26    expression -> ELLT expression
Rule 27    expression -> ELGT expression
Rule 28    expression -> ELLTE expression
Rule 29    expression -> ELGTE expression
Rule 30    expression -> ELEQ LPAREN expression RPAREN
Rule 31    expression -> ELLT LPAREN expression RPAREN
Rule 32    expression -> ELGT LPAREN expression RPAREN
Rule 33    expression -> ELLTE LPAREN expression RPAREN
Rule 34    expression -> ELGTE LPAREN expression RPAREN
Rule 35    expression -> ELEQ LPAREN expression RPAREN LPAREN expression RPAREN
Rule 36    expression -> ELLT LPAREN expression RPAREN LPAREN expression RPAREN
Rule 37    expression -> ELGT LPAREN expression RPAREN LPAREN expression RPAREN
Rule 38    expression -> ELLTE LPAREN expression RPAREN LPAREN expression RPAREN
Rule 39    expression -> ELGTE LPAREN expression RPAREN LPAREN expression RPAREN
Rule 40    expression -> MINUS expression
Rule 41    expression -> expression PLUS expression
Rule 42    expression -> expression MINUS expression
Rule 43    expression -> expression MULT expression
Rule 44    expression -> expression DIV expression
Rule 45    expression -> expression MXEQ
Rule 46    expression -> expression MXLT
Rule 47    expression -> expression MXGT
Rule 48    expression -> expression MXLTE
Rule 49    expression -> expression MXGTE
Rule 50    expression -> MXEQ LPAREN expression RPAREN
Rule 51    expression -> MXLT LPAREN expression RPAREN
Rule 52    expression -> MXGT LPAREN expression RPAREN
Rule 53    expression -> MXLTE LPAREN expression RPAREN
Rule 54    expression -> MXGTE LPAREN expression RPAREN
Rule 55    expression -> expression AND expression
Rule 56    expression -> NOT expression
Rule 57    expression -> MXTRUE expression
Rule 58    expression -> MXFALSE expression
Rule 59    expression -> LPAREN expression RPAREN
Rule 60    expression -> literal
Rule 61    expression -> array_literal
Rule 62    expression -> array_access
Rule 63    expression -> size_operator
Rule 64    expression -> type_conversion
Rule 65    expression -> get_environment
Rule 66    expression -> get_function_result
Rule 67    expression -> IDENTIFIER
Rule 68    program -> statements
Rule 69    block -> LPAREN statements RPAREN
Rule 70    statements -> statement
Rule 71    statements -> statements statement
Rule 72    for_loop -> FOR IDENTIFIER BOUNDARY expression STEP expression block
Rule 73    switch_statement -> SWITCH expression BOOL_LITERAL block else_clause_opt
Rule 74    else_clause_opt -> BOOL_LITERAL block
Rule 75    else_clause_opt -> empty
Rule 76    robot_move -> MOVE
Rule 77    robot_rotate -> ROTATE LEFT
Rule 78    robot_rotate -> ROTATE RIGHT
Rule 79    get_environment -> GET ENVIRONMENT
Rule 80    task_function -> TASK IDENTIFIER LPAREN param_list RPAREN block
Rule 81    param_list -> IDENTIFIER
Rule 82    param_list -> param_list COMMA IDENTIFIER
Rule 83    param_list -> empty
Rule 84    statement -> RESULT expression
Rule 85    function_call -> DO IDENTIFIER arg_list
Rule 86    arg_list -> expression
Rule 87    arg_list -> arg_list expression
Rule 88    arg_list -> empty
Rule 89    get_function_result -> GET IDENTIFIER
Rule 90    statement -> var_declaration
Rule 91    statement -> assignment
Rule 92    statement -> for_loop
Rule 93    statement -> block
Rule 94    statement -> expression
Rule 95    statement -> size_change
Rule 96    statement -> switch_statement
Rule 97    statement -> robot_move
Rule 98    statement -> robot_rotate
Rule 99    statement -> get_environment
Rule 100   statement -> task_function
Rule 101   statement -> function_call
Rule 102   statement -> get_function_result

Terminals, with rules where they appear

AND                  : 55
ASSIGN               : 15 24
BOOL_LITERAL         : 2 73 74
BOUNDARY             : 72
COMMA                : 10 14 18 82
DEC_INT              : 4
DIGITIZE             : 21
DIV                  : 44
DO                   : 85
ELEQ                 : 25 30 35
ELGT                 : 27 32 37
ELGTE                : 29 34 39
ELLT                 : 26 31 36
ELLTE                : 28 33 38
ENVIRONMENT          : 79
EXTEND               : 23
FOR                  : 72
GET                  : 79 89
HEX_INT              : 5
IDENTIFIER           : 15 16 19 20 21 22 23 24 67 72 80 81 82 85 89
LBRACKET             : 6 11 16
LEFT                 : 77
LOGITIZE             : 20
LPAREN               : 19 30 31 32 33 34 35 35 36 36 37 37 38 38 39 39 50 51 52 53 54 59 69 80
MINUS                : 40 42
MOVE                 : 76
MULT                 : 43
MXEQ                 : 45 50
MXFALSE              : 58
MXGT                 : 47 52
MXGTE                : 49 54
MXLT                 : 46 51
MXLTE                : 48 53
MXTRUE               : 57
NOT                  : 56
OCT_INT              : 3
PLUS                 : 41
RBRACKET             : 6 11 16
REDUCE               : 22
RESULT               : 84
RIGHT                : 78
ROTATE               : 77 78
RPAREN               : 19 30 31 32 33 34 35 35 36 36 37 37 38 38 39 39 50 51 52 53 54 59 69 80
SIZE                 : 19
STEP                 : 72
SWITCH               : 73
TASK                 : 80
VAR                  : 15
error                : 

Nonterminals, with rules where they appear

arg_list             : 85 87
array_access         : 62
array_elements_list  : 7 10
array_elements_opt   : 6
array_literal        : 61
assignment           : 91
block                : 72 73 74 80 93
dimensions_list      : 11 14
dimensions_opt       : 15 22 23
else_clause_opt      : 73
empty                : 8 12 75 83 88
expression           : 9 10 13 14 15 17 18 24 25 26 27 28 29 30 31 32 33 34 35 35 36 36 37 37 38 38 39 39 40 41 41 42 42 43 43 44 44 45 46 47 48 49 50 51 52 53 54 55 55 56 57 58 59 72 72 73 84 86 87 94
for_loop             : 92
function_call        : 101
get_environment      : 65 99
get_function_result  : 66 102
indices_list         : 16 18
literal              : 60
param_list           : 80 82
program              : 0
robot_move           : 97
robot_rotate         : 98
size_change          : 95
size_operator        : 63
statement            : 70 71
statements           : 68 69 71
switch_statement     : 96
task_function        : 100
type_conversion      : 64
var_declaration      : 90

Parsing method: LALR

state 0

    (0) S' -> . program
    (68) program -> . statements
    (70) statements -> . statement
    (71) statements -> . statements statement
    (84) statement -> . RESULT expression
    (90) statement -> . var_declaration
    (91) statement -> . assignment
    (92) statement -> . for_loop
    (93) statement -> . block
    (94) statement -> . expression
    (95) statement -> . size_change
    (96) statement -> . switch_statement
    (97) statement -> . robot_move
    (98) statement -> . robot_rotate
    (99) statement -> . get_environment
    (100) statement -> . task_function
    (101) statement -> . function_call
    (102) statement -> . get_function_result
    (15) var_declaration -> . VAR IDENTIFIER dimensions_opt ASSIGN expression
    (24) assignment -> . IDENTIFIER ASSIGN expression
    (72) for_loop -> . FOR IDENTIFIER BOUNDARY expression STEP expression block
    (69) block -> . LPAREN statements RPAREN
    (25) expression -> . ELEQ expression
    (26) expression -> . ELLT expression
    (27) expression -> . ELGT expression
    (28) expression -> . ELLTE expression
    (29) expression -> . ELGTE expression
    (30) expression -> . ELEQ LPAREN expression RPAREN
    (31) expression -> . ELLT LPAREN expression RPAREN
    (32) expression -> . ELGT LPAREN expression RPAREN
    (33) expression -> . ELLTE LPAREN expression RPAREN
    (34) expression -> . ELGTE LPAREN expression RPAREN
    (35) expression -> . ELEQ LPAREN expression RPAREN LPAREN expression RPAREN
    (36) expression -> . ELLT LPAREN expression RPAREN LPAREN expression RPAREN
    (37) expression -> . ELGT LPAREN expression RPAREN LPAREN expression RPAREN
    (38) expression -> . ELLTE LPAREN expression RPAREN LPAREN expression RPAREN
    (39) expression -> . ELGTE LPAREN expression RPAREN LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression MULT expression
    (44) expression -> . expression DIV expression
    (45) expression -> . expression MXEQ
    (46) expression -> . expression MXLT
    (47) expression -> . expression MXGT
    (48) expression -> . expression MXLTE
    (49) expression -> . expression MXGTE
    (50) expression -> . MXEQ LPAREN expression RPAREN
    (51) expression -> . MXLT LPAREN expression RPAREN
    (52) expression -> . MXGT LPAREN expression RPAREN
    (53) expression -> . MXLTE LPAREN expression RPAREN
    (54) expression -> . MXGTE LPAREN expression RPAREN
    (55) expression -> . expression AND expression
    (56) expression -> . NOT expression
    (57) expression -> . MXTRUE expression
    (58) expression -> . MXFALSE expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . literal
    (61) expression -> . array_literal
    (62) expression -> . array_access
    (63) expression -> . size_operator
    (64) expression -> . type_conversion
    (65) expression -> . get_environment
    (66) expression -> . get_function_result
    (67) expression -> . IDENTIFIER
    (22) size_change -> . REDUCE IDENTIFIER dimensions_opt
    (23) size_change -> . EXTEND IDENTIFIER dimensions_opt
    (73) switch_statement -> . SWITCH expression BOOL_LITERAL block else_clause_opt
    (76) robot_move -> . MOVE
    (77) robot_rotate -> . ROTATE LEFT
    (78) robot_rotate -> . ROTATE RIGHT
    (79) get_environment -> . GET ENVIRONMENT
    (80) task_function -> . TASK IDENTIFIER LPAREN param_list RPAREN block
    (85) function_call -> . DO IDENTIFIER arg_list
    (89) get_function_result -> . GET IDENTIFIER
    (2) literal -> . BOOL_LITERAL
    (3) literal -> . OCT_INT
    (4) literal -> . DEC_INT
    (5) literal -> . HEX_INT
    (6) array_literal -> . LBRACKET array_elements_opt RBRACKET
    (16) array_access -> . IDENTIFIER LBRACKET indices_list RBRACKET
    (19) size_operator -> . SIZE LPAREN IDENTIFIER RPAREN
    (20) type_conversion -> . LOGITIZE IDENTIFIER
    (21) type_conversion -> . DIGITIZE IDENTIFIER

    RESULT          shift and go to state 4
    VAR             shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FOR             shift and go to state 20
    LPAREN          shift and go to state 21
    ELEQ            shift and go to state 22
    ELLT            shift and go to state 23
    ELGT            shift and go to state 24
    ELLTE           shift and go to state 25
    ELGTE           shift and go to state 26
    MINUS           shift and go to state 27
    MXEQ            shift and go to state 28
    MXLT            shift and go to state 29
    MXGT            shift and go to state 30
    MXLTE           shift and go to state 31
    MXGTE           shift and go to state 32
    NOT             shift and go to state 33
    MXTRUE          shift and go to state 34
    MXFALSE         shift and go to state 35
    REDUCE          shift and go to state 41
    EXTEND          shift and go to state 42
    SWITCH          shift and go to state 43
    MOVE            shift and go to state 45
    ROTATE          shift and go to state 46
    GET             shift and go to state 47
    TASK            shift and go to state 48
    DO              shift and go to state 49
    BOOL_LITERAL    shift and go to state 44
    OCT_INT         shift and go to state 50
    DEC_INT         shift and go to state 51
    HEX_INT         shift and go to state 52
    LBRACKET        shift and go to state 53
    SIZE            shift and go to state 54
    LOGITIZE        shift and go to state 55
    DIGITIZE        shift and go to state 56

    program                        shift and go to state 1
    statements                     shift and go to state 2
    statement                      shift and go to state 3
    expression                     shift and go to state 5
    var_declaration                shift and go to state 6
    assignment                     shift and go to state 7
    for_loop                       shift and go to state 8
    block                          shift and go to state 9
    size_change                    shift and go to state 10
    switch_statement               shift and go to state 11
    robot_move                     shift and go to state 12
    robot_rotate                   shift and go to state 13
    get_environment                shift and go to state 14
    task_function                  shift and go to state 15
    function_call                  shift and go to state 16
    get_function_result            shift and go to state 17
    literal                        shift and go to state 36
    array_literal                  shift and go to state 37
    array_access                   shift and go to state 38
    size_operator                  shift and go to state 39
    type_conversion                shift and go to state 40

state 1

    (0) S' -> program .



state 2

    (68) program -> statements .
    (71) statements -> statements . statement
    (84) statement -> . RESULT expression
    (90) statement -> . var_declaration
    (91) statement -> . assignment
    (92) statement -> . for_loop
    (93) statement -> . block
    (94) statement -> . expression
    (95) statement -> . size_change
    (96) statement -> . switch_statement
    (97) statement -> . robot_move
    (98) statement -> . robot_rotate
    (99) statement -> . get_environment
    (100) statement -> . task_function
    (101) statement -> . function_call
    (102) statement -> . get_function_result
    (15) var_declaration -> . VAR IDENTIFIER dimensions_opt ASSIGN expression
    (24) assignment -> . IDENTIFIER ASSIGN expression
    (72) for_loop -> . FOR IDENTIFIER BOUNDARY expression STEP expression block
    (69) block -> . LPAREN statements RPAREN
    (25) expression -> . ELEQ expression
    (26) expression -> . ELLT expression
    (27) expression -> . ELGT expression
    (28) expression -> . ELLTE expression
    (29) expression -> . ELGTE expression
    (30) expression -> . ELEQ LPAREN expression RPAREN
    (31) expression -> . ELLT LPAREN expression RPAREN
    (32) expression -> . ELGT LPAREN expression RPAREN
    (33) expression -> . ELLTE LPAREN expression RPAREN
    (34) expression -> . ELGTE LPAREN expression RPAREN
    (35) expression -> . ELEQ LPAREN expression RPAREN LPAREN expression RPAREN
    (36) expression -> . ELLT LPAREN expression RPAREN LPAREN expression RPAREN
    (37) expression -> . ELGT LPAREN expression RPAREN LPAREN expression RPAREN
    (38) expression -> . ELLTE LPAREN expression RPAREN LPAREN expression RPAREN
    (39) expression -> . ELGTE LPAREN expression RPAREN LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression MULT expression
    (44) expression -> . expression DIV expression
    (45) expression -> . expression MXEQ
    (46) expression -> . expression MXLT
    (47) expression -> . expression MXGT
    (48) expression -> . expression MXLTE
    (49) expression -> . expression MXGTE
    (50) expression -> . MXEQ LPAREN expression RPAREN
    (51) expression -> . MXLT LPAREN expression RPAREN
    (52) expression -> . MXGT LPAREN expression RPAREN
    (53) expression -> . MXLTE LPAREN expression RPAREN
    (54) expression -> . MXGTE LPAREN expression RPAREN
    (55) expression -> . expression AND expression
    (56) expression -> . NOT expression
    (57) expression -> . MXTRUE expression
    (58) expression -> . MXFALSE expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . literal
    (61) expression -> . array_literal
    (62) expression -> . array_access
    (63) expression -> . size_operator
    (64) expression -> . type_conversion
    (65) expression -> . get_environment
    (66) expression -> . get_function_result
    (67) expression -> . IDENTIFIER
    (22) size_change -> . REDUCE IDENTIFIER dimensions_opt
    (23) size_change -> . EXTEND IDENTIFIER dimensions_opt
    (73) switch_statement -> . SWITCH expression BOOL_LITERAL block else_clause_opt
    (76) robot_move -> . MOVE
    (77) robot_rotate -> . ROTATE LEFT
    (78) robot_rotate -> . ROTATE RIGHT
    (79) get_environment -> . GET ENVIRONMENT
    (80) task_function -> . TASK IDENTIFIER LPAREN param_list RPAREN block
    (85) function_call -> . DO IDENTIFIER arg_list
    (89) get_function_result -> . GET IDENTIFIER
    (2) literal -> . BOOL_LITERAL
    (3) literal -> . OCT_INT
    (4) literal -> . DEC_INT
    (5) literal -> . HEX_INT
    (6) array_literal -> . LBRACKET array_elements_opt RBRACKET
    (16) array_access -> . IDENTIFIER LBRACKET indices_list RBRACKET
    (19) size_operator -> . SIZE LPAREN IDENTIFIER RPAREN
    (20) type_conversion -> . LOGITIZE IDENTIFIER
    (21) type_conversion -> . DIGITIZE IDENTIFIER

    $end            reduce using rule 68 (program -> statements .)
    RESULT          shift and go to state 4
    VAR             shift and go to state 18
    IDENTIFIER      shift and go to state 19
    FOR             shift and go to state 20
    LPAREN          shift and go to state 21
    ELEQ            shift and go to state 22
    ELLT            shift and go to state 23
    ELGT            shift and go to state 24
    ELLTE           shift and go to state 25
    ELGTE           shift and go to state 26
    MINUS           shift and go to state 27
    MXEQ            shift and go to state 28
    MXLT            shift and go to state 29
    MXGT            shift and go to state 30
    MXLTE           shift and go to state 31
    MXGTE           shift and go to state 32
    NOT             shift and go to state 33
    MXTRUE          shift and go to state 34
    MXFALSE         shift and go to state 35
    REDUCE          shift and go to state 41
    EXTEND          shift and go to state 42
    SWITCH          shift and go to state 43
    MOVE            shift and go to state 45
    ROTATE          shift and go to state 46
    GET             shift and go to state 47
    TASK            shift and go to state 48
    DO              shift and go to state 49
    BOOL_LITERAL    shift and go to state 44
    OCT_INT         shift and go to state 50
    DEC_INT         shift and go to state 51
    HEX_INT         shift and go to state 52
    LBRACKET        shift and go to state 53
    SIZE            shift and go to state 54
    LOGITIZE        shift and go to state 55
    DIGITIZE        shift and go to state 56

    statement                      shift and go to state 57
    expression                     shift and go to state 5
    var_declaration                shift and go to state 6
    assignment                     shift and go to state 7
    for_loop                       shift and go to state 8
    block                          shift and go to state 9
    size_change                    shift and go to state 10
    switch_statement               shift and go to state 11
    robot_move                     shift and go to state 12
    robot_rotate                   shift and go to state 13
    get_environment                shift and go to state 14
    task_function                  shift and go to state 15
    function_call                  shift and go to state 16
    get_function_result            shift and go to state 17
    literal                        shift and go to state 36
    array_literal                  shift and go to state 37
    array_access                   shift and go to state 38
    size_operator                  shift and go to state 39
    type_conversion                shift and go to state 40

state 3

    (70) statements -> statement .

    RESULT          reduce using rule 70 (statements -> statement .)
    VAR             reduce using rule 70 (statements -> statement .)
    IDENTIFIER      reduce using rule 70 (statements -> statement .)
    FOR             reduce using rule 70 (statements -> statement .)
    LPAREN          reduce using rule 70 (statements -> statement .)
    ELEQ            reduce using rule 70 (statements -> statement .)
    ELLT            reduce using rule 70 (statements -> statement .)
    ELGT            reduce using rule 70 (statements -> statement .)
    ELLTE           reduce using rule 70 (statements -> statement .)
    ELGTE           reduce using rule 70 (statements -> statement .)
    MINUS           reduce using rule 70 (statements -> statement .)
    MXEQ            reduce using rule 70 (statements -> statement .)
    MXLT            reduce using rule 70 (statements -> statement .)
    MXGT            reduce using rule 70 (statements -> statement .)
    MXLTE           reduce using rule 70 (statements -> statement .)
    MXGTE           reduce using rule 70 (statements -> statement .)
    NOT             reduce using rule 70 (statements -> statement .)
    MXTRUE          reduce using rule 70 (statements -> statement .)
    MXFALSE         reduce using rule 70 (statements -> statement .)
    REDUCE          reduce using rule 70 (statements -> statement .)
    EXTEND          reduce using rule 70 (statements -> statement .)
    SWITCH          reduce using rule 70 (statements -> statement .)
    MOVE            reduce using rule 70 (statements -> statement .)
    ROTATE          reduce using rule 70 (statements -> statement .)
    GET             reduce using rule 70 (statements -> statement .)
    TASK            reduce using rule 70 (statements -> statement .)
    DO              reduce using rule 70 (statements -> statement .)
    BOOL_LITERAL    reduce using rule 70 (statements -> statement .)
    OCT_INT         reduce using rule 70 (statements -> statement .)
    DEC_INT         reduce using rule 70 (statements -> statement .)
    HEX_INT         reduce using rule 70 (statements -> statement .)
    LBRACKET        reduce using rule 70 (statements -> statement .)
    SIZE            reduce using rule 70 (statements -> statement .)
    LOGITIZE        reduce using rule 70 (statements -> statement .)
    DIGITIZE        reduce using rule 70 (statements -> statement .)
    $end            reduce using rule 70 (statements -> statement .)
    RPAREN          reduce using rule 70 (statements -> statement .)


state 4

    (84) statement -> RESULT . expression
    (25) expression -> . ELEQ expression
    (26) expression -> . ELLT expression
    (27) expression -> . ELGT expression
    (28) expression -> . ELLTE expression
    (29) expression -> . ELGTE expression
    (30) expression -> . ELEQ LPAREN expression RPAREN
    (31) expression -> . ELLT LPAREN expression RPAREN
    (32) expression -> . ELGT LPAREN expression RPAREN
    (33) expression -> . ELLTE LPAREN expression RPAREN
    (34) expression -> . ELGTE LPAREN expression RPAREN
    (35) expression -> . ELEQ LPAREN expression RPAREN LPAREN expression RPAREN
    (36) expression -> . ELLT LPAREN expression RPAREN LPAREN expression RPAREN
    (37) expression -> . ELGT LPAREN expression RPAREN LPAREN expression RPAREN
    (38) expression -> . ELLTE LPAREN expression RPAREN LPAREN expression RPAREN
    (39) expression -> . ELGTE LPAREN expression RPAREN LPAREN expression RPAREN
    (40) expression -> . MINUS expression
    (41) expression -> . expression PLUS expression
    (42) expression -> . expression MINUS expression
    (43) expression -> . expression MULT expression
    (44) expression -> . expression DIV expression
    (45) expression -> . expression MXEQ
    (46) expression -> . expression MXLT
    (47) expression -> . expression MXGT
    (48) expression -> . expression MXLTE
    (49) expression -> . expression MXGTE
    (50) expression -> . MXEQ LPAREN expression RPAREN
    (51) expression -> . MXLT LPAREN expression RPAREN
    (52) expression -> . MXGT LPAREN expression RPAREN
    (53) expression -> . MXLTE LPAREN expression RPAREN
    (54) expression -> . MXGTE LPAREN expression RPAREN
    (55) expression -> . expression AND expression
    (56) expression -> . NOT expression
    (57) expression -> . MXTRUE expression
    (58) expression -> . MXFALSE expression
    (59) expression -> . LPAREN expression RPAREN
    (60) expression -> . literal
    (61) expression -> . array_literal
    (62) expression -> . array_access
    (63) expression -> . size_operator
    (64) expression -> . type_conversion
    (65) expression -> . get_environment
    (66) expression -> . get_function_result
    (67) expression -> . IDENTIFIER
    (2) literal -> . BOOL_LITERAL
    (3) literal -> . OCT_INT
    (4) literal -> . DEC_INT
    (5) literal -> . HEX_INT
    (6) array_literal -> . LBRACKET array_elements_opt RBRACKET
    (16) array_access -> . IDENTIFIER LBRACKET indices_list RBRACKET
    (19) size_operator -> . SIZE LPAREN IDENTIFIER RPAREN
    (20) type_conversion -> . LOGITIZE IDENTIFIER
    (21) type_conversion -> . DIGITIZE IDENTIFIER
    (79) get_environment -> . GET ENVIRONMENT
    (89) get_function_result -> . GET IDENTIFIER

    ELEQ            shift and go to state 22
    ELLT            shift and go to state 23
    ELGT            shift and go to state 24
    ELLTE           shift and go to state 25
    ELGTE           shift and go to state 26
    MINUS           shift and go to state 27
    MXEQ            shift and go to state 28
    MXLT            shift and go to state 29
    MXGT            shift and go to state 30
    MXLTE           shift and go to state 31
    MXGTE           shift and go to state 32
    NOT             shift and go to state 33
    MXTRUE          shift and go to state 34
    MXFALSE         shift and go to state 35
    LPAREN          shift and go to state 59
    IDENTIFIER      shift and go to state 62
    BOOL_LITERAL    shift and go to state 44
    OCT_INT         shift and go to state 50
    DEC_INT         shift and go to state 51
    HEX_INT         shift and go to state 52
    LBRACKET        shift and go to state 53
    SIZE            shift and go to state 54
    LOGITIZE        shift and go to state 55
    DIGITIZE        shift and go to state 56
    GET             shift and go to state 47

    expression                     shift and go to state 58
    literal                        shift and go to state 36
    array_literal                  shift and go to state 37
    array_access                   shift and go to state 38
    size_operator                  shift and go to state 39
    type_conversion                shift and go to state 40
    get_environment                shift and go to state 60
    get_function_result            shift and go to state 61

state 5

    (94) statement -> expression .
    (41) expression -> expression . PLUS expression
    (42) expression -> expression . MINUS expression
    (43) expression -> expression . MULT expression
    (44) expression -> expression . DIV expression
    (45) expression -> expression . MXEQ
    (46) expression -> expression . MXLT
    (47) expression -> expression . MXGT
    (48) expression -> expression . MXLTE
    (49) expression -> expression . MXGTE
    (55) expression -> expression . AND expression

  ! shift/reduce conflict for MINUS resolved as shift
  ! shift/reduce conflict for MXEQ resolved as shift
  ! shift/reduce conflict for MXLT resolved as shift
  ! shift/reduce conflict for MXGT resolved as shift
  ! shift/reduce conflict for MXLTE resolved as shift
  ! shift/reduce conflict for MXGTE resolved as shift
    RESULT          reduce using rule 94 (statement -> expression .)
    VAR             reduce using rule 94 (statement -> expression .)
    IDENTIFIER      reduce using rule 94 (statement -> expression .)
    FOR             reduce using rule 94 (statement -> expression .)
    LPAREN          reduce using rule 94 (statement -> expression .)
    ELEQ            reduce using rule 94 (statement -> expression .)
    ELLT            reduce using rule 94 (statement -> expression .)
    ELGT            reduce using rule 94 (statement -> expression .)
    ELLTE           reduce using rule 94 (statement -> expression .)
    ELGTE           reduce using rule 94 (statement -> expression .)
    NOT             reduce using rule 94 (statement -> expression .)
    MXTRUE          reduce using rule 94 (statement -> expression .)
    MXFALSE         reduce using rule 94 (statement -> expression .)
    REDUCE          reduce using rule 94 (statement -> expression .)
    EXTEND          reduce using rule 94 (statement -> expression .)
    SWITCH          reduce using rule 94 (statement -> expression .)
    MOVE            reduce using rule 94 (statement -> expression .)
    ROTATE          reduce using rule 94 (statement -> expression .)
    GET             reduce using rule 94 (statement -> expression .)
    TASK            reduce using rule 94 (statement -> expression .)
    DO              reduce using rule 94 (statement -> expression .)
    BOOL_LITERAL    reduce using rule 94 (statement -> expression .)
    OCT_INT         reduce using rule 94 (statement -> expression .)
    DEC_INT         reduce using rule 94 (statement -> expression .)
    HEX_INT         reduce using rule 94 (statement -> expression .)
    LBRACKET        reduce using rule 94 (statement -> expression .)
    SIZE            reduce using rule 94 (statement -> expression .)
    LOGITIZE        reduce using rule 94 (statement -> expression .)
    DIGITIZE        reduce using rule 94 (statement -> expression .)
    $end            reduce using rule 94 (statement -> expression .)
    RPAREN          reduce using rule 94 (statement -> expression .)
    PLUS            shift and go to state 63
    MINUS           shift and go to state 64
    MULT            shift and go to state 65
    DIV             shift and go to state 66
    MXEQ            shift and go to state 67
    MXLT            shift and go to state 68
    MXGT            shift and go to state 69
    MXLTE           shift and go to state 70
    MXGTE           shift and go to state 71
    AND             shift and go to state 72

  ! MINUS           [ reduce using rule 94 (statement -> expression .) ]
  ! MXEQ            [ reduce using rule 94 (statement -> expression .) ]
  ! MXLT            [ reduce using rule 94 (statement -> expression .) ]
  ! MXGT            [ reduce using rule 94 (statement -> expression .) ]
  ! MXLTE           [ reduce using rule 94 (statement -> expression .) ]
  ! MXGTE           [ reduce using rule 94 (statement -> expression .) ]


state 6

    (90) statement -> var_declaration .

    RESULT          reduce using rule 90 (statement -> var_declaration .)
    VAR             reduce using rule 90 (statement -> var_declaration .)
    IDENTIFIER      reduce using rule 90 (statement -> var_declaration .)
    FOR             reduce using rule 90 (statement -> var_declaration .)
    LPAREN          reduce using rule 90 (statement -> var_declaration .)
    ELEQ            reduce using rule 90 (statement -> var_declaration .)
    ELLT            reduce using rule 90 (statement -> var_declaration .)
    ELGT            reduce using rule 90 (statement -> var_declaration .)
    ELLTE           reduce using rule 90 (statement -> var_declaration .)
    ELGTE           reduce using rule 90 (statement -> var_declaration .)
    MINUS           reduce using rule 90 (statement -> var_declaration .)
    MXEQ            reduce using rule 90 (statement -> var_declaration .)
    MXLT            reduce using rule 90 (statement -> var_declaration .)
    MXGT            reduce using rule 90 (statement -> var_declaration .)
    MXLTE           reduce using rule 90 (statement -> var_declaration .)
    MXGTE           reduce using rule 90 (statement -> var_declaration .)
    NOT             reduce using rule 90 (statement -> var_declaration .)
    MXTRUE          reduce using rule 90 (statement -> var_declaration .)
    MXFALSE         reduce using rule 90 (statement -> var_declaration .)
    REDUCE          reduce using rule 90 (statement -> var_declaration .)
    EXTEND          reduce using rule 90 (statement -> var_declaration .)
    SWITCH          reduce using rule 90 (statement -> var_declaration .)
    MOVE            reduce using rule 90 (statement -> var_declaration .)
    ROTATE          reduce using rule 90 (statement -> var_declaration .)
    GET             reduce using rule 90 (statement -> var_declaration .)
    TASK            reduce using rule 90 (statement -> var_declaration .)
    DO              reduce using rule 90 (statement -> var_declaration .)
    BOOL_LITERAL    reduce using rule 90 (statement -> var_declaration .)
    OCT_INT         reduce using rule 90 (statement -> var_declaration .)
    DEC_INT         reduce using rule 90 (statement -> var_declaration .)
    HEX_INT         reduce using rule 90 (statement -> var_declaration .)
    LBRACKET        reduce using rule 90 (statement -> var_declaration .)
    SIZE            reduce using rule 90 (statement -> var_declaration .)
    LOGITIZE        reduce using rule 90 (statement -> var_declaration .)
    DIGITIZE        reduce using rule 90 (statement -> var_declaration .)
    $end            reduce using rule 90 (statement -> var_declaration .)
    RPAREN          reduce using rule 90 (statement -> var_declaration .)


state 7

    (91) statement -> assignment .
